[package]
name = "digital-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
rand = "0.8"
lazy_static = "1.4.0"
num-traits = "0.2.15"
num-bigint-dig = { version = "0.8.1", features = ["rand"] }